Update for similar search description and Intro page

--- a/Web/Pages/CCGMember/Details.cshtml
+++ b/Web/Pages/CCGMember/Details.cshtml
@@ -21,9 +21,9 @@
         </h2>
         <div class="row">
             <ol class="breadcrumb">
-                <li><a asp-page="../Index">@Localizer["Home"]</a></li>
+                <li><a asp-page="../Homepage">@Localizer["Home"]</a></li>
                 <li><a asp-page="AllPositions">@Localizer["Categories"]</a></li>
-                <li><a asp-page="CurrentPosition" asp-all-route-data="routedata">@Localizer["Select"]</a></li>
+                <li><a asp-page="CurrentPosition" asp-all-route-data="@routedata">@Localizer["Select"]</a></li>
                 <li><a class="breadcrumb-item active" aria-current="page">@Localizer["Current Position"]</a></li>
             </ol>
         </div>
