--- a/Web/Pages/CCGMember/SearchType.cshtml
+++ b/Web/Pages/CCGMember/SearchType.cshtml
@@ -24,62 +24,71 @@
                             };
 }
 
-    <section role="contentinfo">
-        <nav role="navigation" id="wb-bc" property="breadcrumb">
-            <h2 class="wb-inv">
-                @Localizer["You are here:"]
-            </h2>
-            <div class="row">
-                <ol class="breadcrumb">
-                    <li><a asp-page="../../Index">@Localizer["Home"]</a></li>
-                    <li><a asp-page="../AllPositions">@Localizer["Categories"]</a></li>
-                    <li><a asp-page="../CurrentPosition" asp-all-route-data="routedataprevious">@Localizer["Select"]</a></li>
-                    <li><a asp-page="Details" asp-all-route-data="routedataprevious">@Localizer["Current Position"]</a></li>
-                    <li><a class="breadcrumb-item active" aria-current="page">@Localizer["Search Type"]</a></li>
-                </ol>
-            </div>
-        </nav>
-        <nav role="navigation" class="mrgn-bttm-lg">
-            <h2 class="wb-inv">Document navigation</h2>
-            <ul class="pager">
-                <li class="previous"><a asp-page="Details" asp-all-route-data="@routedataprevious" class="btn btn-default" type="button" rel="prev">@Localizer["Previous"]</a></li>
-            </ul>
-        </nav>
-        <h2 class="mrgn-tp-0 mrgn-bttm-md"><b>@Localizer["Question1"]</b></h2>
+<section role="contentinfo">
+    <nav role="navigation" id="wb-bc" property="breadcrumb">
+        <h2 class="wb-inv">
+            @Localizer["You are here:"]
+        </h2>
         <div class="row">
+            <ol class="breadcrumb">
+                <li><a href="../../Homepage">@Localizer["Home"]</a></li>
+                <li><a href="../AllPositions">@Localizer["Categories"]</a></li>
+                <li><a asp-page="CurrentPosition" asp-all-route-data="@routedataprevious">@Localizer["Select"]</a></li>
+                <li><a asp-page="Details" asp-all-route-data="@routedataprevious">@Localizer["Current Position"]</a></li>
+                <li><a class="breadcrumb-item active" aria-current="page">@Localizer["Search Type"]</a></li>
+            </ol>
+        </div>
+    </nav>
+    <nav role="navigation" class="mrgn-bttm-lg">
+        <h2 class="wb-inv">Document navigation</h2>
+        <ul class="pager">
+            <li class="previous"><a asp-page="Details" asp-all-route-data="@routedataprevious" class="btn btn-default" type="button" rel="prev">@Localizer["Previous"]</a></li>
+        </ul>
+    </nav>
+    <h2 class="mrgn-tp-0 mrgn-bttm-md"><b>@Localizer["Question1"]</b></h2>
+    <div class="row">
 
-            <div class="col-md-4 col-sm-4 mrgn-bttm-md">
-                <a style="text-decoration:none" asp-page="Similar/SimilarSearch" asp-all-route-data="@routedata">
-                    <figure class="thumbnail eqht-trgt" style="vertical-align: top;">
-                        <div class="img-container">
-                            <figcaption class="caption text-center"><h3 class="mrgn-tp-0">@Localizer["Similar"]</h3></figcaption>
-                            <img src="~/img/CCGMember/similar.jpg" alt="@Localizer["PhotoSimilar"]" class="img-responsive center" />
-                        </div>
-                    </figure>
-                </a>
-            </div>
-
-            <div class="col-md-4 col-sm-4 mrgn-bttm-md">
-                <a style="text-decoration:none" asp-page="Compare/AllObjective" asp-all-route-data="routedata">
-                    <figure class="thumbnail eqht-trgt" style="vertical-align: top;">
-                        <div class="img-container">
-                            <figcaption class="caption text-center"><h3 class="mrgn-tp-0">@Localizer["Compare"]</h3></figcaption>
-                            <img src="~/img/CCGMember/compare.jpg" alt="@Localizer["PhotoCompare"]" class="img-responsive center" />
-                        </div>
-                    </figure>
-                </a>
-            </div>
+        <div class="col-md-4 col-sm-4 mrgn-bttm-md">
             
+                <figure class="thumbnail eqht-trgt" style="vertical-align: top;">
+                    <div class="img-container">
+                        <figcaption class="caption text-left">
+                            <a style="text-decoration:none" title="@Localizer["infosimilar"]" href="#similar" aria-controls="mid-screen" class="overlay-lnk" role="button"><span class="glyphicon glyphicon-info-sign pull-right"></span></a>
+                            <h3 class="mrgn-tp-0 mrgn-lft-sm"><a style="text-decoration:none" asp-page="Similar/SimilarSearch" asp-all-route-data="@routedata">@Localizer["Similar"]</a></h3>
+                        </figcaption>
+                        <a style="text-decoration:none" asp-page="Similar/SimilarSearch" asp-all-route-data="@routedata"><img src="~/img/CCGMember/similar.jpg" alt="@Localizer["PhotoSimilar"]" class="img-responsive center" /></a>
+                    </div>
+                </figure>
+            <section id="similar" class="wb-overlay modal-content overlay-def wb-popup-mid">
+                <header class="modal-header">
+                    <h2 class="modal-title">@Localizer["Similar Function"]</h2>
+                </header>
+                <div class="modal-body ">
+                    @Localizer["modalsimilar"]
+                    <a class="btn btn-primary pull-left" asp-page="Similar/SimilarSearch" asp-all-route-data="@routedata">@Localizer["contsimilar"]</a><button class="btn btn-default pull-left mrgn-lft-md overlay-close" type="button">@Localizer["Close"]</button>
+                </div>
+            </section>
         </div>
-        <!--    <div class="row">
-            <div class="col-lg-12 mrgn-bttm-md">
-                <nav role="navigation" class="mrgn-bttm-lg">
-                    <h2 class="wb-inv">Document navigation</h2>
-                    <ul class="pager">
-                        <li class="previous"><a asp-page="Details" asp-all-route-data="@routedataprevious" class="btn btn-default" type="button" rel="prev">@Localizer["Previous"]</a></li>
-                    </ul>
-                </nav>
-            </div>
+
+        <div class="col-md-4 col-sm-4 mrgn-bttm-md">
+            <a style="text-decoration:none" href="#compare" aria-controls="mid-screen" class="overlay-lnk" role="button">
+                <figure class="thumbnail eqht-trgt" style="vertical-align: top;">
+                    <div class="img-container">
+                        <figcaption class="caption text-left"><h3 class="mrgn-tp-0">@Localizer["Compare"]</h3></figcaption>
+                        <img src="~/img/CCGMember/compare.jpg" alt="@Localizer["PhotoCompare"]" class="img-responsive center" />
+                    </div>
+                </figure>
+            </a>
+            <section id="compare" class="wb-overlay modal-content overlay-def wb-popup-mid">
+                <header class="modal-header">
+                    <h2 class="modal-title">@Localizer["Compare Function"]</h2>
+                </header>
+                <div class="modal-body ">
+                    @Localizer["modalcompare"]
+                    <a class="btn btn-primary pull-left" asp-page="Compare/AllObjective" asp-all-route-data="@routedata">@Localizer["contcompare"]</a> <button class="btn btn-default pull-left mrgn-lft-md overlay-close" type="button">@Localizer["Close"]</button>
+                </div>
+            </section>
         </div>
-    -->
-    </section>
+
+    </div>
+</section>
