--- a/Web/Pages/CCGMember/Similar/SimilarList.cshtml
+++ b/Web/Pages/CCGMember/Similar/SimilarList.cshtml
@@ -74,7 +74,7 @@ else{
         </h2>
         <div class="row">
             <ol class="breadcrumb">
-                <li><a asp-page="../../Index">@Localizer["Home"]</a></li>
+                <li><a asp-page="../../Homepage">@Localizer["Home"]</a></li>
                 @if (Model.PreviousPage.Contains("Student"))
                 {
                     <li><a asp-page="../../Student/Index">@Localizer["Student"]</a></li>
