--- a/Web/Pages/CCGMember/Similar/SimilarSearch.cshtml
+++ b/Web/Pages/CCGMember/Similar/SimilarSearch.cshtml
@@ -68,7 +68,7 @@ else if (!(Model.PageSubmit == "true"))
         </h2>
         <div class="row">
             <ol class="breadcrumb">
-                <li><a asp-page="../../Index">@Localizer["Home"]</a></li>
+                <li><a asp-page="../../Homepage">@Localizer["Home"]</a></li>
                 <li><a asp-page="../AllPositions">@Localizer["Categories"]</a></li>
                 <li><a asp-page="../CurrentPosition" asp-all-route-data="routedataprevious">@Localizer["Select"]</a></li>
                 <li><a asp-page="../Details" asp-all-route-data="routedataprevious">@Localizer["Current Position"]</a></li>
@@ -471,7 +471,7 @@ else if (Model.PageEdit)
         </h2>
         <div class="row">
             <ol class="breadcrumb">
-                <li><a asp-page="../../Index">@Localizer["Home"]</a></li>
+                <li><a asp-page="../../Homepage">@Localizer["Home"]</a></li>
                 <li><a asp-page="../AllPositions">@Localizer["Categories"]</a></li>
                 <li><a asp-page="../CurrentPosition" asp-all-route-data="routedataprevious">@Localizer["Select"]</a></li>
                 <li><a asp-page="../Details" asp-all-route-data="routedataprevious">@Localizer["Current Position"]</a></li>
