--- a/Web/Pages/Candidate/Seagoing/Crew/Index.cshtml
+++ b/Web/Pages/Candidate/Seagoing/Crew/Index.cshtml
@@ -10,7 +10,7 @@
             </h2>
             <div class="row">
                 <ol class="breadcrumb">
-                    <li><a href="../../../Index">@Localizer["Home"]</a></li>
+                    <li><a href="../../../Homepage">@Localizer["Home"]</a></li>
                     <li><a href="../../Index">@Localizer["Candidate"]</a></li>
                     <li><a href="../Index">@Localizer["Seagoing"]</a></li>
                     <li><a class="breadcrumb-item active" aria-current="page">@Localizer["Crew"]</a></li>
