--- a/Web/Pages/CCGMember/AllPositions.cshtml
+++ b/Web/Pages/CCGMember/AllPositions.cshtml
@@ -12,7 +12,7 @@
             </h2>
             <div class="row">
                 <ol class="breadcrumb">
-                    <li><a asp-page="../Index">@Localizer["Home"]</a></li>
+                    <li><a asp-page="../Homepage">@Localizer["Home"]</a></li>
                     <li><a class="breadcrumb-item active" aria-current="page">@Localizer["Categories"]</a></li>
                 </ol>
             </div>
@@ -20,7 +20,7 @@
         <nav role="navigation">
             <h2 class="wb-inv">Document navigation</h2>
             <ul class="pager">
-                <li class="previous"><a asp-page="../Index" class="btn btn-default" type="button" rel="prev">@Localizer["Previous"]</a></li>
+                <li class="previous"><a asp-page="../Homepage" class="btn btn-default" type="button" rel="prev">@Localizer["Previous"]</a></li>
             </ul>
         </nav>
         <div class="col-md-12">
