--- a/Web/Pages/CCGMember/Compare/Delta.cshtml
+++ b/Web/Pages/CCGMember/Compare/Delta.cshtml
@@ -72,7 +72,7 @@
         </h2>
         <div class="row">
             <ol class="breadcrumb">
-                <li><a asp-page="../../Index">@Localizer["Home"]</a></li>
+                <li><a asp-page="../../Homepage">@Localizer["Home"]</a></li>
                 @if (Model.PreviousPage.Contains("Student"))
                 {
                     <li><a asp-page="../../Student/Index">@Localizer["Student"]</a></li>
