--- a/Web/Pages/Candidate/Seagoing/Officer/Navigation/PositionList.cshtml
+++ b/Web/Pages/Candidate/Seagoing/Officer/Navigation/PositionList.cshtml
@@ -13,7 +13,7 @@
             </h2>
             <div class="row">
                 <ol class="breadcrumb">
-                    <li><a href="../../../../Index">@Localizer["Home"]</a></li>
+                    <li><a href="../../../../Homepage">@Localizer["Home"]</a></li>
                     <li><a href="../../../Index">@Localizer["Candidate"]</a></li>
                     <li><a href="../../Index">@Localizer["Seagoing"]</a></li>
                     <li><a href="../Index">@Localizer["Officer"]</a></li>
