--- a/Web/Pages/Contact.cshtml
+++ b/Web/Pages/Contact.cshtml
@@ -9,7 +9,7 @@
     <h2 id="breadcrumbPosition">You are here:</h2>
     <div class="container">
         <ol class="breadcrumb">
-            <li><a asp-page="Index">@Localizer["Home"]</a></li>
+            <li><a asp-page="Homepage">@Localizer["Home"]</a></li>
             <li><a class="breadcrumb-item active" aria-current="page">@Localizer["Contact"]</a></li>
         </ol>
     </div>
