--- a/Web/Pages/Faqs.cshtml
+++ b/Web/Pages/Faqs.cshtml
@@ -10,7 +10,7 @@
     </h2>
     <div class="row">
         <ol class="breadcrumb">
-            <li><a asp-page="Index">@Localizer["Home"]</a></li>
+            <li><a asp-page="Homepage">@Localizer["Home"]</a></li>
             <li><a class="breadcrumb-item active" aria-current="page">@Localizer["FAQs"]</a></li>
         </ol>
     </div>
