--- a/Web/Pages/Index.cshtml
+++ b/Web/Pages/Index.cshtml
@@ -2,61 +2,27 @@
 @model Web.Pages.IndexModel
 @inject IViewLocalizer Localizer
 @{
-    ViewData["Title"] = "Home";
+    ViewData["Title"] = "Intro";
 }
+
 <nav role="navigation" id="wb-bc" property="breadcrumb">
     <h2>
         @Localizer["You are here:"]
     </h2>
     <div class="row">
         <ol class="breadcrumb">
-            <li><a class="breadcrumb-item active" aria-current="page">@Localizer["Home"]</a></li>
+            <li><a class="breadcrumb-item active" aria-current="page">@Localizer["Intro"]</a></li>
         </ol>
     </div>
 </nav>
 <div class="text-left">
-    <h1 class="display-4">@Localizer["IndexTitle"]</h1>
-    <p>@Localizer["WelcomeText"]</p>
+    <h1 class="display-4">@Localizer["Title"]</h1>
+    <p>@Localizer["IntroText"]</p>
+
+    <h2>@Localizer["Certifications"]</h2>
+    <p>@Localizer["CertText"]</p>
+
+    <h2>@Localizer["Competencies"]</h2>
+    <p>@Localizer["CompText"]</p>
 </div>
-
-<div class="text-left">
-    <h2 class="mrgn-bttm-lg"><b>@Localizer["Question1"]</b></h2>
-</div>
-
-<div class="container">
-    <div class="row">
-        <div class="col-md-3 col-sm-3">
-            <a alt="@Localizer["searchmember"]" style="text-decoration:none" asp-page="CCGMember/AllPositions">
-                <figure class="thumbnail eqht-trgt" style="vertical-align: top;">
-                    <div class="img-container">
-                        <figcaption class="caption text-center"><h3 class="mrgn-tp-0">@Localizer["CCGMember"]</h3></figcaption>
-                        <img src="~/img/CCG-employee.jpg" alt="@Localizer["PhotoMember"]" class="img-responsive center" />
-                    </div>
-                </figure>
-            </a>
-        </div>
-
-        <div class="col-md-3 col-sm-3">
-            <a alt="@Localizer["searchexternal"]" style="text-decoration:none" asp-page="Candidate/Index">
-                <figure class="thumbnail eqht-trgt" style="vertical-align: top;">
-                    <div class="img-container">
-                        <figcaption class="caption text-center"><h3 class="mrgn-tp-0">@Localizer["ExternalCandidate"]</h3></figcaption>
-                        <img src="~/img/external candidates.jpg" alt="@Localizer["PhotoExternal"]" class="img-responsive center" />
-                    </div>
-                </figure>
-            </a>
-        </div>
-
-        <div class="col-md-3 col-sm-3">
-            <a alt="@Localizer["searchstudent"]" style="text-decoration:none" asp-page="Student/Index">
-                <figure class="thumbnail eqht-trgt" style="vertical-align: top;">
-                    <div class="img-container">
-                        <figcaption class="caption text-center"><h3 class="mrgn-tp-0">@Localizer["Student"]</h3></figcaption>
-                        <img src="~/img/Students.jpg" alt="@Localizer["PhotoStudents"]" class="img-responsive center" />
-                    </div>
-                </figure>
-            </a>
-        </div>
-       
-    </div>
-</div>
+<a class="btn btn-primary pull-left" asp-page="Homepage">@Localizer["continue"]</a>
