--- a/Web/Pages/Student/College/Seagoing/Officer/Engineering.cshtml
+++ b/Web/Pages/Student/College/Seagoing/Officer/Engineering.cshtml
@@ -13,7 +13,7 @@
             </h2>
             <div class="row">
                 <ol class="breadcrumb">
-                    <li><a href="../../../../Index">@Localizer["Home"]</a></li>
+                    <li><a href="../../../../Homepage">@Localizer["Home"]</a></li>
                     <li><a href="../../../Index">@Localizer["Student"]</a></li>
                     <li><a href="../../Index">@Localizer["TechCollege"]</a></li>
                     <li><a href="../Index">@Localizer["Seagoing"]</a></li>
