--- a/Web/Pages/Student/Index.cshtml
+++ b/Web/Pages/Student/Index.cshtml
@@ -12,7 +12,7 @@
             </h2>
             <div class="row">
                 <ol class="breadcrumb">
-                    <li><a href="../../Index">@Localizer["Home"]</a></li>
+                    <li><a href="../../Homepage">@Localizer["Home"]</a></li>
                     <li>@Localizer["Student"]</li>
                 </ol>
             </div>
