--- a/Web/Pages/Student/University/Index.cshtml
+++ b/Web/Pages/Student/University/Index.cshtml
@@ -12,8 +12,8 @@
             </h2>
             <div class="row">
                 <ol class="breadcrumb">
-                    <li><a href="../../../Index">@Localizer["Home"]</a></li>
-                    <li><a href="../../Index">@Localizer["Student"]</a></li>
+                    <li><a href="../../Homepage">@Localizer["Home"]</a></li>
+                    <li><a href="../Index">@Localizer["Student"]</a></li>
                     <li><a class="breadcrumb-item active" aria-current="page">@Localizer["University"]</a></li>
                 </ol>
             </div>
