--- a/Web/Pages/CCGMember/Similar/SimilarSearch.cshtml
+++ b/Web/Pages/CCGMember/Similar/SimilarSearch.cshtml
@@ -538,7 +538,7 @@ else if (Model.PageEdit)
                 </tbody>
             </table>
         }
-        @if (Model.EightyPercentPositions.Any(e => e.Active != 0))
+        else if (Model.EightyPercentPositions.Any(e => e.Active != 0))
         {
             <table class="table table-hover table-responsive table-bordered">
                 <h3 class="text-center">@Localizer["SIMILAR POSITIONS"] (80%)</h3>
@@ -584,7 +584,7 @@ else if (Model.PageEdit)
                 </tbody>
             </table>
         }
-        @if (Model.NinetyPercentPositions.Any(e => e.Active != 0))
+         else if (Model.NinetyPercentPositions.Any(e => e.Active != 0))
         {
             <table class="table table-hover table-responsive table-bordered">
                 <h3 class="text-center">@Localizer["SIMILAR POSITIONS"] (90%)</h3>
@@ -630,7 +630,7 @@ else if (Model.PageEdit)
                 </tbody>
             </table>
         }
-        @if (Model.HundredPercentPositions.Any(e => e.Active != 0))
+         else if (Model.HundredPercentPositions.Any(e => e.Active != 0))
         {
             <h3 class="text-center">@Localizer["SIMILAR POSITIONS"] (100%)</h3>
             <h5>@Model.HundredPercentPositions.Length @Localizer[countmessage100]</h5>
