--- a/Web/Pages/Candidate/Shoreside/AllCandidateShoreside.cshtml
+++ b/Web/Pages/Candidate/Shoreside/AllCandidateShoreside.cshtml
@@ -13,8 +13,8 @@
             </h2>
             <div class="row">
                 <ol class="breadcrumb">
-                    <li><a href="../../Homepage">@Localizer["Home"]</a></li>
-                    <li><a href="../Index">@Localizer["Candidate"]</a></li>
+                    <li><a asp-page="../../Homepage">@Localizer["Home"]</a></li>
+                    <li><a asp-page="../Index">@Localizer["Candidate"]</a></li>
                     <li><a class="breadcrumb-item active" aria-current="page">@Localizer["Shoreside"]</a></li>
                 </ol>
             </div>
