--- a/Web/Pages/Student/College/Seagoing/Crew/Logistics.cshtml
+++ b/Web/Pages/Student/College/Seagoing/Crew/Logistics.cshtml
@@ -12,11 +12,11 @@
             </h2>
             <div class="row">
                 <ol class="breadcrumb">
-                    <li><a href="../../../../Homepage">@Localizer["Home"]</a></li>
-                    <li><a href="../../../Index">@Localizer["Student"]</a></li>
-                    <li><a href="../../Index">@Localizer["TechCollege"]</a></li>
-                    <li><a href="../Index">@Localizer["Seagoing"]</a></li>
-                    <li><a href="Index">@Localizer["Crew"]</a></li>
+                    <li><a asp-page="../../../../Homepage">@Localizer["Home"]</a></li>
+                    <li><a asp-page="../../../Index">@Localizer["Student"]</a></li>
+                    <li><a asp-page="../../Index">@Localizer["TechCollege"]</a></li>
+                    <li><a asp-page="../Index">@Localizer["Seagoing"]</a></li>
+                    <li><a asp-page="Index">@Localizer["Crew"]</a></li>
                     <li><a class="breadcrumb-item active" aria-current="page">@Localizer["Logistics"]</a></li>
                 </ol>
             </div>
