--- a/Web/Pages/Student/HighSchool/Seagoing/SeagoingEngineer.cshtml
+++ b/Web/Pages/Student/HighSchool/Seagoing/SeagoingEngineer.cshtml
@@ -12,10 +12,10 @@
             </h2>
             <div class="row">
                 <ol class="breadcrumb">
-                    <li><a href="../../../Homepage">@Localizer["Home"]</a></li>
-                    <li><a href="../../Index">@Localizer["Student"]</a></li>
-                    <li><a href="../Index">@Localizer["High School"]</a></li>
-                    <li><a href="Index">@Localizer["Seagoing"]</a></li>
+                    <li><a asp-page="../../../Homepage">@Localizer["Home"]</a></li>
+                    <li><a asp-page="../../Index">@Localizer["Student"]</a></li>
+                    <li><a asp-page="../Index">@Localizer["High School"]</a></li>
+                    <li><a asp-page="Index">@Localizer["Seagoing"]</a></li>
                     <li><a class="breadcrumb-item active" aria-current="page">@Localizer["Engineering"]</a></li>
                 </ol>
             </div>
