--- a/Web/Pages/Candidate/Index.cshtml
+++ b/Web/Pages/Candidate/Index.cshtml
@@ -11,7 +11,7 @@
             </h2>
             <div class="row">
                 <ol class="breadcrumb">
-                    <li><a href="../Homepage">@Localizer["Home"]</a></li>
+                    <li><a asp-page="../Homepage">@Localizer["Home"]</a></li>
                     <li><a class="breadcrumb-item active" aria-current="page">@Localizer["Candidate"]</a></li>
                 </ol>
             </div>
