--- a/Web/Pages/Candidate/Seagoing/Officer/Navigation/PositionList.cshtml
+++ b/Web/Pages/Candidate/Seagoing/Officer/Navigation/PositionList.cshtml
@@ -13,10 +13,10 @@
             </h2>
             <div class="row">
                 <ol class="breadcrumb">
-                    <li><a href="../../../../Homepage">@Localizer["Home"]</a></li>
-                    <li><a href="../../../Index">@Localizer["Candidate"]</a></li>
-                    <li><a href="../../Index">@Localizer["Seagoing"]</a></li>
-                    <li><a href="../Index">@Localizer["Officer"]</a></li>
+                    <li><a asp-page="../../../../Homepage">@Localizer["Home"]</a></li>
+                    <li><a asp-page="../../../Index">@Localizer["Candidate"]</a></li>
+                    <li><a asp-page="../../Index">@Localizer["Seagoing"]</a></li>
+                    <li><a asp-page="../Index">@Localizer["Officer"]</a></li>
                     <li><a class="breadcrumb-item active" aria-current="page">@Localizer["Navigation"]</a></li>
                 </ol>
             </div>
