--- a/Web/Pages/Student/College/Shoreside/Cook.cshtml
+++ b/Web/Pages/Student/College/Shoreside/Cook.cshtml
@@ -13,10 +13,10 @@
             </h2>
             <div class="row">
                 <ol class="breadcrumb">
-                    <li><a href="../../../Homepage">@Localizer["Home"]</a></li>
-                    <li><a href="../../Index">@Localizer["Student"]</a></li>
-                    <li><a href="../Index">@Localizer["TechCollege"]</a></li>
-                    <li><a href="Index">@Localizer["Shoreside"]</a></li>
+                    <li><a asp-page="../../../Homepage">@Localizer["Home"]</a></li>
+                    <li><a asp-page="../../Index">@Localizer["Student"]</a></li>
+                    <li><a asp-page="../Index">@Localizer["TechCollege"]</a></li>
+                    <li><a asp-page="Index">@Localizer["Shoreside"]</a></li>
                     <li><a class="breadcrumb-item active" aria-current="page">@Localizer["Cook"]</a></li>
                 </ol>
             </div>
