--- a/Web/Pages/Student/HighSchool/Shoreside/Index.cshtml
+++ b/Web/Pages/Student/HighSchool/Shoreside/Index.cshtml
@@ -13,9 +13,9 @@
         </h2>
         <div class="row">
             <ol class="breadcrumb">
-                <li><a href="../../../Homepage">@Localizer["Home"]</a></li>
-                <li><a href="../../Index">@Localizer["Student"]</a></li>
-                <li><a href="../Index">@Localizer["High School"]</a></li>
+                <li><a asp-page="../../../Homepage">@Localizer["Home"]</a></li>
+                <li><a asp-page="../../Index">@Localizer["Student"]</a></li>
+                <li><a asp-page="../Index">@Localizer["High School"]</a></li>
                 <li><a class="breadcrumb-item active" aria-current="page">@Localizer["Shoreside"]</a></li>
             </ol>
         </div>
