--- a/Web/Pages/CCGMember/Similar/SimilarDetails.cshtml
+++ b/Web/Pages/CCGMember/Similar/SimilarDetails.cshtml
@@ -356,7 +356,27 @@
                 </tr>
             }
             <tr>
-                <th style="background-color:#f2f2f2" colspan="2">@Localizer["REGIONS"]</th>
+                <th style="background-color:#f2f2f2" colspan="2">@Localizer["REGIONS"] <a title="@Localizer["linkmap"]" href="#map" aria-controls="mid-screen" class="overlay-lnk" role="button">@Localizer["linkmap"]</a>
+                                                                                       <section id="map" class="wb-overlay modal-content overlay-def wb-popup-mid">
+                                                                                           <header class="modal-header">
+                                                                                               <h2 class="modal-title">@Localizer["modalTitleMap"]</h2>
+                                                                                           </header>
+                                                                                           <div class="modal-body ">
+                                                                                               <div class="thumbnail img-responsive">
+                                                                                                   <img src="~/img/region-ccg-gcc-canada.jpg" alt="@Localizer["altPhotoMap"]" class="img-responsive center" />
+                                                                                               </div>
+                                                                                               <details>
+                                                                                                   <summary id="3">@Localizer["mapSummary"]</summary>
+                                                                                                   <p>@Localizer["ArcticRegion"]</p>
+                                                                                                   <p>@Localizer["WesternRegion"]</p>
+                                                                                                   <p>@Localizer["CentralRegion"]</p>
+                                                                                                   <p>@Localizer["AtlanticRegion"]</p>
+                                                                                                   <p>@Localizer["CollegeRegion"]</p>
+                                                                                                   <p>@Localizer["HeadQRegion"]</p>
+                                                                                               </details>
+                                                                                               <button class="btn btn-default pull-left mrgn-tp-md mrgn-lft-md overlay-close" type="button">@Localizer["Close"]</button>
+                                                                                           </div>
+                                                                                       </section></th>
             </tr>
             @if (Model.JobLocationRegions.Any())
             {
